[package]
name = "cpcdos_interpreter"
version = "0.1.0"
authors = ["0v3rl0w (Jordan D)"]
edition = "2018"
description = "A toy interpreter for interpreting CpcdosC+"
homepage = "https://github.com/0v3rl0w/Cpcdos-Interpreter"
license = "GPL-3.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
